[tool.poetry]
name = "nala"
version = "0.15.4"
description = "Commandline frontend for the apt package manager"
authors = [
	"Blake Lee <blake@volian.org>",
	"Sourajyoti Basak <wiz28@protonmail.com>",
]
license = "GPL-3.0-or-later"
readme = "README.rst"
homepage = "https://gitlab.com/volian/nala"
repository = "https://gitlab.com/volian/nala"
documentation = "https://gitlab.com/volian/nala"
keywords = [
	"nala",
	"apt",
	"cli",
	"command line",
	"console",
	"debian",
	"package manager",
	"ubuntu"
]
classifiers = [
	'Development Status :: 4 - Beta',
	'Environment :: Console',
	"Intended Audience :: Developers",
	"Intended Audience :: End Users/Desktop",
	"Intended Audience :: System Administrators",
	'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
	'Operating System :: POSIX :: Linux',
	'Programming Language :: Python :: 3',
	'Programming Language :: Python :: 3.9',
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	'Programming Language :: Python :: 3 :: Only',
	"Topic :: System",
	"Topic :: System :: Archiving :: Packaging",
	"Topic :: System :: Installation/Setup",
	"Topic :: System :: Systems Administration",
	"Topic :: System :: Software Distribution",
	"Topic :: Utilities",
	"Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "0.28.1"
rich = "^13.9.4"
pexpect = "^4.9.0"
anyio = "^4.9.0"
typer = "^0.15.2"
tomli = "^2.2.1"
typing-extensions = "^4.12.2"
socksio = {version = "1.0.0", optional = true}

[tool.poetry.group.dev.dependencies]
black = { git = "https://github.com/volitank/black.git", branch = "black-tabs" }
codespell = "2.4.1"
isort = "6.0.1"
mypy = "1.15.0"
pre-commit = "4.2.0"
pyupgrade = "3.19.1"
pydocstyle = "6.3.0"
pylint = "3.3.5"

[tool.poetry.extras]
socks = ["socksio"]

[tool.isort]
py_version = "auto"
balanced_wrapping = true
multi_line_output = 3
combine_as_imports = true
combine_star = true
indent = "\t"
group_by_package = true
known_first_party = ["nala"]
lexicographical = true
profile = "black"

[tool.mypy]
python_executable="/usr/bin/python3"
disallow_untyped_decorators = false
ignore_missing_imports = true
no_warn_unused_ignores = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = true

[tool.pydocstyle]
add_select = "D211, D212"
ignore = "D206, D203, D213, D417"

[tool.poetry.scripts]
nala = "nala.__main__:main"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
